--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "23_express_generated",
-  "version": "0.0.0",
+  "name": "commuter-server",
+  "version": "0.1.0",
   "private": true,
+  "author": "David Raviv",
+  "license": "ISC",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "docker build -t commuter-server ."
   },
   "dependencies": {
-    "body-parser": "~1.12.4",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.7",
-    "express": "~4.12.4",
-    "hbs": "^4.1.3",
-    "morgan": "~1.9.2",
-    "serve-favicon": "~2.2.1"
+    "dotenv": "^16.4.5",
+    "express": "~4.19.2",
+    "http-errors": "^2.0.0",
+    "mongoose": "^8.2.3",
+    "morgan": "~1.10.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "nodemon": "^3.1.0"
   }
 }
