--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
     container_name: mongo-db
     image: mongo:latest
     restart: always
+    ports:
+      - 127.0.0.1:27017:27017 
     volumes:
       - mongo_data:/data/db
 
