--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ node_modules/
 # dotenv environment variables file
 .env
 
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
