--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "docker-run": "docker compose down ; docker rmi commuterserver-commuter-server ; docker-compose up"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": ">=5.1.0",
